--- a/index.html
+++ b/index.html
@@ -59,11 +59,37 @@
                 <h3>Gói Like Facebook</h3>
                 <p>1000 like - 100.000 VNĐ</p>
                 <a href="#" class="btn">Mua ngay</a>
+                <div class="service">
+    <h2>Gói Like Facebook</h2>
+    <p>1000 Like - 100.000 VNĐ</p>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="your-email@example.com"> <!-- Thay bằng email PayPal của bạn -->
+        <input type="hidden" name="item_name" value="Gói Like Facebook">
+        <input type="hidden" name="amount" value="100.00"> <!-- Giá tiền (USD) -->
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="submit" value="Thanh toán ngay" class="btn">
+    </form>
+</div>
+
             </div>
             <div class="service">
                 <h3>Gói Sub YouTube</h3>
                 <p>1000 sub - 150.000 VNĐ</p>
                 <a href="#" class="btn">Mua ngay</a>
+                <div class="service">
+    <h2>Gói Sub YouTube</h2>
+    <p>1000 Sub - 150.000 VNĐ</p>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="your-email@example.com"> <!-- Thay bằng email PayPal của bạn -->
+        <input type="hidden" name="item_name" value="Gói Sub YouTube">
+        <input type="hidden" name="amount" value="150.00"> <!-- Giá tiền (USD) -->
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="submit" value="Thanh toán ngay" class="btn">
+    </form>
+</div>
+
             </div>
         </div>
     </div>
