--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChillVN Clone</title>
+    <title>SHOP BÁN LIKE SUB GIÁ RẺ PHẠM LÂM</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
     <header class="bg-blue-500 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">ChillVN Clone</h1>
+            <h1 class="text-2xl font-bold">SHOP BÁN LIKE SUB GIÁ RẺ PHẠM LÂM</h1>
             <nav>
                 <a href="#services" class="px-4">Dịch vụ</a>
-                <a href="#contact" class="px-4">Liên hệ</a>
+                <a href="#contact" class="px-4">Liên hệ cho admin</a>
             </nav>
         </div>
     </header>
@@ -31,9 +31,33 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <!-- Dịch vụ 1 -->
             <div class="bg-white p-6 shadow rounded">
-                <h3 class="text-xl font-bold">Tăng Like Facebook</h3>
-                <p class="mt-2">1000 Like - 100.000 VNĐ</p>
+                <h3 class="text-xl font-bold">Tăng Like Facebook giá rẻ</h3>
+                <p class="mt-2">1000 Like - 20.000 VNĐ</p>
                 <button class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Mua ngay</button>
+          <!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thanh toán Momo</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="bg-white shadow-lg rounded-lg p-6">
+        <h1 class="text-2xl font-bold text-center mb-4">Thanh toán qua Momo</h1>
+        <p class="text-center mb-4">Quét mã QR bên dưới để thanh toán:</p>
+        <div class="flex justify-center">
+            <img src="momo-qr.png" alt="Mã QR Momo" class="w-48 h-48 rounded-lg">
+        </div>
+        <p class="text-center text-gray-500 mt-4">Cảm ơn bạn đã sử dụng dịch vụ của chúng tôi!</p>
+    </div>
+</body>
+</html>
+
+</div>
+ 
+</div>
+
             </div>
             <!-- Dịch vụ 2 -->
             <div class="bg-white p-6 shadow rounded">
@@ -44,7 +68,7 @@
             <!-- Dịch vụ 3 -->
             <div class="bg-white p-6 shadow rounded">
                 <h3 class="text-xl font-bold">Tăng View TikTok</h3>
-                <p class="mt-2">10.000 View - 200.000 VNĐ</p>
+                <p class="mt-2">10.000 View - 10.000 VNĐ</p>
                 <button class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">Mua ngay</button>
             </div>
         </div>
